# tauri-init

./: Cargo.toml  LICENSE-MIT  build.sh
docs/: CNAME  index.html  tauri-init.sh
src/: main.rs  step.rs
src/scripts/: install-rust.sh  install-rustup.sh  install-xcode-tools.sh
src/step/: rust.rs  tauri_cli.rs  xcode_clt.rs
