[package]
name = "tauri-init"
version = "0.0.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
console = "0.15"
dirs = "4"
ureq = { version = "2", default-features = false, features = ["tls"] }
which = "4"

[profile.release]
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
panic = "abort"
